Initial commitUpdate .suo

--- a/QuanLyBanMoHinh.GUI/QuanLyBanMoHinh.GUI.csproj
+++ b/QuanLyBanMoHinh.GUI/QuanLyBanMoHinh.GUI.csproj
@@ -269,6 +269,9 @@
       <Name>QuanLyBanMoHinh.DAL</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\r.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
